...
          textId = BottomNavBarTestTags.SAVED)
  val EXPLORE =
      TopLevelDestination(
          route = Route.EXPLORE,
          icon = Icons.Outlined.Search,
          textId = BottomNavBarTestTags.EXPLORE)
  val MY_PROFILE =
      TopLevelDestination(
          route = Route.MY_PROFILE,
          icon = Icons.Outlined.Person,
          textId = BottomNavBarTestTags.MY_PROFILE)
}

...
  const val MAP = "Map_Screen"
  const val EXPLORE = "Explore_Screen"
  const val SAVED = "Saved_Screen"
  const val MY_PROFILE = "MyProfile_Screen"
  const val EDIT_PROFILE = "Edit_Profile_Screen"
  const val SOMEONE_ELSE_PROFILE = "SomeoneElseProfile_Screen"
  const val SETTINGS = "Settings"
  const val ASSOCIATION_PROFILE = "Association_Profile_Screen"
  const val SAVE_ASSOCIATION = "Save_Assocation_Screen"
  const val EVENT_DETAILS = "Event_Details_Screen"
  const val CLAIM_ASSOCIATION_RIGHTS = "User_Claim_Association_Rights_Screen"
  const val CLAIM_ASSOCIATION_PRESIDENTIAL_RIGHTS =
      "User_Claim_Association_Presidential_Rights_Screen"
...
