...
    onOutsideClickHandled()
  }

  DockedSearchBar(
      inputField = {
        SearchBarDefaults.InputField(
            modifier = Modifier.testTag("SEARCH_BAR_INPUT"),
            query = searchQuery,
            onQueryChange = { onQueryChange(it) },
            onSearch = {},
            expanded = isExpanded,
            onExpandedChange = { isExpanded = it },
            placeholder = {
...
                  modifier = Modifier.testTag("SEARCH_TRAILING_ICON"))
            },
        )
      },
      expanded = isExpanded,
      onExpandedChange = { isExpanded = it },
      modifier = Modifier.padding(horizontal = 16.dp).testTag("SEARCH_BAR")) {
        when (searchState) {
          SearchViewModel.Status.ERROR -> {
            Box(
                modifier = Modifier.fillMaxWidth().padding(16.dp),
                contentAlignment = Alignment.Center) {
                  Text(context.getString(R.string.explore_search_error_message))
...
