...
}

/** String manager for the verifyCode and sendVerificationEmail functions */
private object UserClaimAssociationPresidentialRightsParserStrings {
  // Verification code firebase function
  const val VERIFY_CODE = "verifyCode"
  const val CODE = "code"
  const val USER_UID = "userUid"

  // Send verification email firebase function
  const val SEND_VERIFICATION_EMAIL = "sendVerificationEmail"
  const val EMAIL = "email"

...
